Consumo de dados Wikidata funcionando. Importação de Academics e busca de Ocupações dos Academics.

--- a/MScheduler/pom.xml
+++ b/MScheduler/pom.xml
@@ -63,5 +63,16 @@
 			<artifactId>bootstrap</artifactId>
 			<version>1.0.10</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>apache-jena-libs</artifactId>
+			<type>pom</type>
+		<version>3.3.0</version>
+	 </dependency>
 	</dependencies>
 </project>
